--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -75,8 +75,10 @@ input[type="submit"]{
 				<td>Profile Photo:</td>
 				<td><input type="file" name="imageFile"></td>
 			</tr>
-			
 			<tr><td colspan="3">&nbsp;</td></tr>
+			<tr th:if="${message != null}">
+					<td colspan="2" th:text="${message}" style="color:green"></td>
+			</tr>
 			<tr>
 				<td><input type="submit" value="Submit" name="button"></td>
 				<td><a href="http://localhost:7070/">Back to Login</a></td>
