User Inseret to Register

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -30,7 +30,7 @@ input[type="submit"]{
 </style>
 </head>
 <body>
-	<h1 align="center">USER INSERET</h1>
+	<h1 align="center">Register</h1>
 	<form action="#" th:action="@{/savemem}" th:object="${user}" method="post" enctype="multipart/form-data">
 		<table>
 			<tr>
