--- a/src/main/resources/templates/firstpage.html
+++ b/src/main/resources/templates/firstpage.html
@@ -5,6 +5,14 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<p>first page</p>
+	<p th:text=${user.getIdUser()}></p>
+	<p th:text=${user.getName()}></p>
+	<p th:text=${user.getGender()}></p>
+	<p th:text=${user.getBirthday()}></p>
+	<p th:text=${user.getTel()}></p>
+	<p th:text=${user.getAddress()}></p>
+	<p th:text=${user.getEmail()}></p>
+	<p th:text=${user.getType()}></p>
+	<p th:text=${user.getCoin()}></p>
 </body>
 </html>
