--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@ input[type="submit"]{
 				<tr><td colspan="3">&nbsp;</td></tr>
 				<tr>
 					<td><input type="submit" value="login"></td>
-					<td><a href="/greeting">Sign up</a> </td>
+					<td><a href="/signup">Sign up</a> </td>
 				</tr>
 			</tbody>
 		</table> 
