--- a/src/main/resources/static/CSS/Sfirstpage.css
+++ b/src/main/resources/static/CSS/Sfirstpage.css
@@ -1,14 +1,18 @@
 @charset "UTF-8";
 
+/* Color Variables */
 :root {
-  --brown: #c7b198;
+  --brown: #cbaf87;
+  --x: #c7b198;
   --brown2: #f4ebc1;
 }
 
 body{
+	font-family: 'Bai Jamjuree', sans-serif;
 	height: 100vh;
 	display: flex;
 	background-color: var(--brown2);
+	color: gray;
 }
 
 .center{
@@ -17,7 +21,118 @@ body{
 	justify-content: center;
 }
 
-.btnseller {
+
+/* Nav */
+table {
+	/*margin: 5px;
+	margin-left: 40%;*/
+	border: none;
+	/*padding: 10px 20px;*/
+	cursor: pointer;
+	border-radius: 6px;
+}
+
+ul {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: var(--brown);
+	box-shadow: 2px 2px 5px gray; 
+}
+li {
+	float: left;
+	height: 60px;
+}
+li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 4px 16px;
+	text-decoration: none;
+}
+.profilepicture{
+	border-radius: 50px;
+	width: 50px;
+	height: 50px;
+}
+
+/* Login Page */
+input[type="text"],input[type="password"]{
+	height: 16pt;
+	border-radius: 16pt;
+	border: 1px solid gray;
+}
+input[type="submit"]{
+	font-family: 'Bai Jamjuree', sans-serif;
+	background-color: #1592E6;
+	border: none;
+	padding: 5px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 14pt;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 10px;
+	width: 100%;
+	color: white;
+}
+h1{
+	margin: -5% 0 0 0;
+}
+tr{
+	height: 14pt;
+}
+.loginwhitebg{
+	flex-direction: column;
+	background-color: rgba(255,255,255,0.75);
+	border-radius: 0 100px;
+	width: 60%;
+	height: 80%;
+	box-shadow: 5px 5px 5px gray;
+	margin-top: 6%; 
+}
+.col1{
+	width: 50%;
+	height: 100%;
+	float: left;
+}
+.col2{
+	width: 50%;
+	height: 100%;
+	float: right;
+	flex-direction: column;
+}
+.incorrect{
+	color: red;
+}
+
+.forgotpw{
+	font-size: 10pt;
+	float: right;
+}
+.newuser{
+	width: 100%;
+	height: 40%;
+}
+.signup{
+	color: #1592E6;
+	text-decoration: none;
+	font-size: 14pt;
+}
+
+.center{
+  	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.btnfirstpage {
 	box-sizing: border-box;
 	appearance: none;
 	background-color: transparent;
@@ -39,12 +154,11 @@ body{
 	height: 15%;
 	width: 40%;
 }
-.btn:hover{
+.btnfirstpage:hover{
 	color: white;
   	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
   	box-shadow: 0 0 40px 40px var(--brown) inset;
 }
-
 .whitebg{
 	flex-direction: column;
 	background-color: rgba(255,255,255,0.75);
@@ -53,44 +167,11 @@ body{
 	height: 70%;
 	box-shadow: 5px 5px 5px gray;
 }
-
-ul {
+.logout{
 	position: fixed;
-	top: 0;
-	width: 100%;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #f5b971;
+	top: 35px;
+	right: 100px;
+	color: #30475e;
 }
 
-li {
-	float: left;
-	height: 60px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 
-li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 4px 16px;
-	text-decoration: none;
-}
-
-.active {
-  background-color: #4CAF50;
-}
-
-.profilepicture{
-	border-radius: 50px;
-	width: 50px;
-	height: 50px;
-}
-
-.nav{
-	height: 50px;
-}
