--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
-<style>
+<!-- <style>
 :root {
   --brown: #cbaf87;
   --x: #c7b198;
@@ -131,7 +132,7 @@ li a {
 	text-decoration: none;
 	font-size: 14pt;
 }
-</style>
+</style> -->
 </head>
 <body class="center">
 	<ul>
