Add Transfer check pages

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 <link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
-<!-- <style>
+<style>
 :root {
   --brown: #cbaf87;
   --x: #c7b198;
@@ -26,7 +26,7 @@ body{
 	justify-content: center;
 }
 h1{
-	margin: -5% 0 0 0;
+	margin: -10% 0% 6% 0%;
 }
 
 .incorrect{
@@ -55,7 +55,7 @@ input[type="submit"]{
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 14pt;
+	font-size: 12pt;
 	margin: 4px 2px;
 	cursor: pointer;
 	border-radius: 10px;
@@ -63,7 +63,7 @@ input[type="submit"]{
 	color: white;
 }
 tr{
-	height: 14pt;
+	height: 16pt;
 }
 
 ul {
@@ -98,6 +98,7 @@ li a {
 	height: 50px;
 }
 
+/* Login */
 .loginwhitebg{
 	flex-direction: column;
 	background-color: rgba(255,255,255,0.75);
@@ -108,9 +109,11 @@ li a {
 	margin-top: 6%; 
 }
 .col1{
-	width: 50%;
-	height: 100%;
+	width: 49%;
+	height: 92%;
+	margin: 4% 0 4% 0;
 	float: left;
+	border-right: 1px gray solid;
 }
 .col2{
 	width: 50%;
@@ -124,15 +127,18 @@ li a {
 	float: right;
 }
 .newuser{
+	display: flex;
+	align-items: flex-end;
 	width: 100%;
-	height: 40%;
+	height: 30%;
+	font-size: 10pt;
 }
 .signup{
 	color: #1592E6;
 	text-decoration: none;
 	font-size: 14pt;
 }
-</style> -->
+</style>
 </head>
 <body class="center">
 	<ul>
