--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -76,7 +76,7 @@ li a {
 /* Change Information */
 .brownbg{
 	position: relative;
-	background: rgba(255,255,255,0.75);
+	background: rgba(255,255,255,0.4);
 	height: 70%;
 	width: 70%;
 	box-shadow: 5px 5px 5px gray;
@@ -102,8 +102,15 @@ table{
 	cursor: default;
 }
 .inputinfo{
-	width: 80%;
-	cursor: pointer;
+	width: 90%;
+	height: 20pt;
+	cursor: text;
+}
+.inputaddress{
+	width: 90%;
+	height: 80pt;
+	cursor: text;
+	resize: none;
 }
 .left{
 	position: absolute;
@@ -112,12 +119,15 @@ table{
 }
 .btnconfirm{
 	position: absolute;
-	background-color: green;
+	background-color: #79d70f;
 	color: white;
-	width: 80pt;
+	width: 60pt;
 	height: 22pt;
-	right: 18%;
+	right: 14%;
 	bottom: 8%;
+	border: none;
+	box-shadow: 2px 2px 5px gray;
+	cursor: pointer;
 }
 
 </style>
@@ -142,6 +152,10 @@ table{
 		<td><input class="inputinfo" type="text" placeholder="ex. เมตตา อารี" ></td>
 	</tr>
 	<tr>
+		<td>เบอร์โทรศัพท์</td>
+		<td><input class="inputinfo" type="text" placeholder="ex. 0800000000" ></td>
+	</tr>
+	<tr>
 		<td>เพศ</td>
 		<td><select class="inputinfo">
 		<option>หญิง </option>
@@ -153,13 +167,10 @@ table{
 		<td>วันเกิด</td>
 		<td><input class="inputinfo" type="date"></td>
 	</tr>
-	<tr>
-		<td>เบอร์โทรศัพท์</td>
-		<td><input class="inputinfo" type="text" placeholder="ex. 0800000000" ></td>
-	</tr>
+	
 	<tr>
 		<td>ที่อยู่</td>
-		<td><textarea class="inputinfo" rows="10" cols="30"></textarea></td>
+		<td><textarea class="inputaddress"></textarea></td>
 	</tr>
 	</table>
 	<button class="btnconfirm">ยืนยัน </button>
