--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -152,6 +152,10 @@ table{
 		<td><input class="inputinfo" type="text" placeholder="ex. เมตตา อารี" ></td>
 	</tr>
 	<tr>
+		<td>แก้ไขรหัสผ่าน </td>
+		<td><input class="inputinfo" type="text"></td>
+	</tr>
+	<tr>
 		<td>เบอร์โทรศัพท์</td>
 		<td><input class="inputinfo" type="text" placeholder="ex. 0800000000" ></td>
 	</tr>
@@ -163,10 +167,7 @@ table{
 		<option>ไม่ระบุ </option>
 		</select></td>
 	</tr>
-	<tr>
-		<td>วันเกิด</td>
-		<td><input class="inputinfo" type="date"></td>
-	</tr>
+	
 	
 	<tr>
 		<td>ที่อยู่</td>
