--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -131,6 +131,16 @@ table{
 }
 
 </style>
+<script type="text/javascript">
+function togglePW() {
+	  var x = document.getElementById("password");
+	  if (x.type === "password") {
+	    x.type = "text";
+	  } else {
+	    x.type = "password";
+	  }
+}
+</script>
 </head>
 <body class="center">
 	<ul>
@@ -153,7 +163,8 @@ table{
 	</tr>
 	<tr>
 		<td>แก้ไขรหัสผ่าน </td>
-		<td><input class="inputinfo" type="text"></td>
+		<td><input class="inputinfo" type="password" id="password"></td>
+		<td><input type="checkbox" onclick="togglePW()">Show</td>
 	</tr>
 	<tr>
 		<td>เบอร์โทรศัพท์</td>
