--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -131,6 +131,16 @@ table{
 }
 
 </style>
+<script type="text/javascript">
+function togglePW() {
+	  var x = document.getElementById("password");
+	  if (x.type === "password") {
+	    x.type = "text";
+	  } else {
+	    x.type = "password";
+	  }
+}
+</script>
 </head>
 <body class="center">
 	<ul>
