--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -163,7 +163,7 @@ function togglePW() {
 	</tr>
 	<tr>
 		<td>แก้ไขรหัสผ่าน </td>
-		<td><input class="inputinfo" type="password" id=""></td>
+		<td><input class="inputinfo" type="password" id="password"></td>
 		<td><input type="checkbox" onclick="togglePW()">Show</td>
 	</tr>
 	<tr>
