--- a/src/main/resources/templates/myinfo.html
+++ b/src/main/resources/templates/myinfo.html
@@ -124,7 +124,7 @@ td p{
 }
 .btneditinfo{
 	position: absolute;
-	/*color: #79d70f;*/
+	color: #1592E6;
 	height: 22pt;
 	right: 14%;
 	bottom: 8%;
