--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -190,7 +190,7 @@ function togglePW() {
 			</tr>
 			<tr><td colspan="2">&nbsp;</td></tr>
 			<tr>
-				<td><a href="#">Back</a></td>
+				<td><a href="/myinfo">Back</a></td>
 				<td><input type="submit" class="btnconfirm" value="Submit" name="button"></td>
 			</tr>
 		</table>
