button to a href

--- a/src/main/resources/templates/firstpage.html
+++ b/src/main/resources/templates/firstpage.html
@@ -112,9 +112,9 @@ li a {
 		<a href="/logout" class="logout">logout</a>
 	</ul>
 	<div class="whitebg center">
-		<button class="btnfirstpage">ซื้อของ </button><br>
-		<button class="btnfirstpage">แจ้งชำระเงิน </button><br>
-		<button class="btnfirstpage">ติดตามเลขพัสดุ </button><br>
+		<a href="#productsell" class="btnfirstpage">ซื้อของ </a><br>
+		<a href="#transfer" class="btnfirstpage">แจ้งชำระเงิน </a><br>
+		<a href="#trackcheck" class="btnfirstpage">ติดตามเลขพัสดุ </a><br>
 	</div>
 </body>
 </html>
