--- a/src/main/resources/templates/Sfirstpage.html
+++ b/src/main/resources/templates/Sfirstpage.html
@@ -217,8 +217,8 @@ function off() {
 	</div>
 	<div class="whitebg center">
 		<a href="/transfercheck" class="btnfirstpage">ตรวจสอบ </a><br>
-		<a href="/transfercheck" class="btnfirstpage">ต้องจัดส่ง </a><br>
-		<a href="/transfercheck" class="btnfirstpage">จัดส่งแล้ว </a><br>
+		<a href="#mustsend" class="btnfirstpage">ต้องจัดส่ง </a><br>
+		<a href="#complete" class="btnfirstpage">จัดส่งแล้ว </a><br>
 	</div>
 </body>
 </html>
