center button a href

--- a/src/main/resources/templates/Sfirstpage.html
+++ b/src/main/resources/templates/Sfirstpage.html
@@ -216,9 +216,9 @@ function off() {
 		</div>
 	</div>
 	<div class="whitebg center">
-		<a href="/transfercheck" class="btnfirstpage">ตรวจสอบ </a><br>
-		<a href="#mustsend" class="btnfirstpage">ต้องจัดส่ง </a><br>
-		<a href="#complete" class="btnfirstpage">จัดส่งแล้ว </a><br>
+		<a href="/transfercheck" class="btnfirstpage center">ตรวจสอบ </a><br>
+		<a href="#mustsend" class="btnfirstpage center">ต้องจัดส่ง </a><br>
+		<a href="#complete" class="btnfirstpage center">จัดส่งแล้ว </a><br>
 	</div>
 </body>
 </html>
