--- a/src/main/resources/templates/firstpage.html
+++ b/src/main/resources/templates/firstpage.html
@@ -117,9 +117,9 @@ li a {
 		<a href="/logout" class="logout">logout</a>
 	</ul>
 	<div class="whitebg center">
-		<a href="#productsell" class="btnfirstpage">ซื้อของ </a><br>
-		<a href="#transfer" class="btnfirstpage">แจ้งชำระเงิน </a><br>
-		<a href="#trackcheck" class="btnfirstpage">ติดตามเลขพัสดุ </a><br>
+		<a href="#productsell" class="btnfirstpage center">ซื้อของ </a><br>
+		<a href="#transfer" class="btnfirstpage center">แจ้งชำระเงิน </a><br>
+		<a href="#trackcheck" class="btnfirstpage center">ติดตามเลขพัสดุ </a><br>
 	</div>
 </body>
 </html>
