edit change firstpage

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -142,8 +142,8 @@ li a {
 </head>
 <body class="center">
 	<ul>
-		<li><a href="#home"><img class="profilepicture" th:src="@{/Pembroke-Welsh-Corgi-Puppies-Lying-Down.jpg}"></a></li>
-		<li class="center"><a href="#contact">ร้านขายของน้องหมา </a></li>
+		<li><a href="/"><img class="profilepicture" th:src="@{/Pembroke-Welsh-Corgi-Puppies-Lying-Down.jpg}"></a></li>
+		<li class="center"><a href="/">ร้านขายของน้องหมา </a></li>
 	</ul>
 	<div class="loginwhitebg">
 	<div class="col1 center">
