title and addcategory page

--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>ร้านขายของน้องหมา </title>
 <style>
 td{
 	border: 2px solid black;
@@ -22,14 +23,14 @@ td{
 			<button>เสื้อ </button>
 			<button>แก้ว </button>
 			<button>พวงกุญแจ </button>
-			<a href="/addoneproduct">เพิ่ม </a>
+			<a href="/addcategory">เพิ่ม </a>
 		</td>
 	</tr>
 	<tr>
 		<td>สินค้าที่มีตอนนี้ </td>
 		<td>
 			<div class="center">
-				<button>เพิ่มสินค้า </button>
+				<a href="/addoneproduct">เพิ่มสินค้า </a>
 			</div>
 			<div>
 				เสื้อ 1<br>
