add delete btn in editproduct

--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -33,14 +33,14 @@ td{
 				<a href="/addoneproduct">เพิ่มสินค้า </a>
 			</div>
 			<div>
-				เสื้อ 1<br>
+				เสื้อ 1 <input type="button" value="delete"><br>
 				S <input type="number">
 				M <input type="number"><br>
 				L <input type="number">
 				XL <input type="number"><br>
 			</div>
 			<div>
-				เสื้อ 2<br>
+				เสื้อ 2 <input type="button" value="delete"><br>
 				S <input type="number">
 				M <input type="number"><br>
 				L <input type="number">
