connect product page

--- a/src/main/resources/templates/Sfirstpage.html
+++ b/src/main/resources/templates/Sfirstpage.html
@@ -189,7 +189,7 @@ li a {
 		</li>
 		<li style="float:right"><a href="/myinfo" th:text="${session.user.getName()}"></a></li>
 		<a href="/logout" class="logout">logout</a>
-		<a href="#editproduct" class="editproduct">แก้ไขรายการสินค้า </a>
+		<a href="/editproduct" class="editproduct">แก้ไขรายการสินค้า </a>
 	</ul>
 	<div class="whitebg center">
 		<a href="/transfercheck" class="btnfirstpage center">ตรวจสอบ </a><br>
